--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,51 @@
-extends layout
+//- doctype html
+//- html
+//-   head
+//-     title= title
+//-     link(href="https://vjs.zencdn.net/7.20.3/video-js.css", rel="stylesheet")
+//-     style.
+//-       .video-container {
+//-         display: flex;
+//-         justify-content: space-around;
+//-         flex-wrap: wrap;
+//-         gap: 20px;
+//-       }
+//-       .video-item {
+//-         text-align: center;
+//-       }
+//-   body
+//-     h1= title
+//-     .video-container
+//-       .video-item
+//-         h2 Calidad 480p
+//-         video#video-480.video-js(controls preload="auto" width="320" height="180" data-setup="{}")
+//-           source(src="/videos/480p.m3u8" type="application/x-mpegURL")
+//-           | Tu navegador no soporta reproducción de video.
+//-       .video-item
+//-         h2 Calidad 720p
+//-         video#video-720.video-js(controls preload="auto" width="640" height="360" data-setup="{}")
+//-           source(src="/videos/720p.m3u8" type="application/x-mpegURL")
+//-           | Tu navegador no soporta reproducción de video.
+//-       .video-item
+//-         h2 Calidad 1080p
+//-         video#video-1080.video-js(controls preload="auto" width="960" height="540" data-setup="{}")
+//-           source(src="/videos/1080p.m3u8" type="application/x-mpegURL")
+//-           | Tu navegador no soporta reproducción de video.
+//-     script(src="https://vjs.zencdn.net/7.20.3/video.min.js")
 
-block content
-  h1= title
-  p Welcome to #{title}
+doctype html
+html(lang="en")
+  head
+    meta(charset="UTF-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(http-equiv="X-UA-Compatible" content="ie=edge")
+    title Player - Live 🔴
+    link(href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet")
+    script(src="https://vjs.zencdn.net/7.5.4/video.js")
+  
+  body
+    video#player.video-js.vjs-default-skin(width="800", height="440", controls, preload="none")
+      source(src="http://192.168.1.136:8080/livestream/stream.m3u8" type="application/x-mpegURL")
+    
+    script.
+      var player = videojs('#player')
